--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: abeljoo
+disqus_username: abeljoo-com
 
 # Netease settings
 netease_comment: false
