--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Abel‘s Blog
-SEOTitle: Abel Joo 的博客 | Abel‘s Blog
+SEOTitle: Abel Joo 的博客 | Abel's Blog
 header-img: img/home-bg.jpg
 # email: x@gmail.com
 description: "当你停止创造，你的才能就不再重要，剩下的只有品味，品味会排斥其他人，让你变得更狭隘，所以，要创造。"
