--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Abel‘s Blog
+title: Abel's Blog
 SEOTitle: Abel Joo 的博客 | Abel's Blog
 header-img: img/home-bg.jpg
 # email: x@gmail.com
